# colors

./: .gitignore  Cargo.toml  README.md
settings/: settings.json
src/: highligher.rs  log.rs  main.rs  settings.rs  ui.rs
