[package]
name = "colors"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"
authors = ["Francesco Basso fra2000.basso@gmail.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.20.1"  # GUI
rfd = "0.10.0"  # File I/O, messagebox
image = "0.24.4"  # Win icon loading
serde_derive = "1.0.152"
serde_json = "1.0.91"
serde = "1.0.152"
chrono = "0.4.23"

[profile.release]
panic = "abort"

[profile.dev.package."*"]
opt-level = 3
